--- a/examples/react-esm/package.json
+++ b/examples/react-esm/package.json
@@ -14,13 +14,16 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@storybook/react": "7.0.0-beta.2",
-    "@storybook/react-webpack5": "7.0.0-beta.2",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@storybook/manager-api": "^8.0.0",
+    "@storybook/react": "^8.0.0",
+    "@storybook/react-webpack5": "^8.0.0",
+    "@storybook/theming": "^8.0.0",
     "babel-loader": "^9.1.3",
     "http-server": "^14.1.1",
-    "storybook": "7.0.0-beta.2",
+    "storybook": "^8.0.0",
     "storybook-addon-performance": "workspace:*",
-    "typescript": "^4.9.5",
+    "typescript": "^5.6.3",
     "webpack": "^5.90.0"
   },
   "scripts": {
