--- a/packages/storybook-addon-performance/package.json
+++ b/packages/storybook-addon-performance/package.json
@@ -23,23 +23,22 @@
     "/dist"
   ],
   "dependencies": {
-    "@storybook/manager-api": "^7.6.10",
-    "@storybook/theming": "^7.6.10",
-    "@storybook/types": "^7.6.10",
     "@xstate/react": "^3.2.2",
     "xstate": "^4.38.3"
   },
-  "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
-  },
   "devDependencies": {
-    "@storybook/channels": "^7.6.10",
-    "@storybook/components": "^7.6.10",
-    "@storybook/core-events": "^7.6.10",
-    "@storybook/preview-api": "^7.6.10",
+    "@storybook/channels": "^8.0.0",
+    "@storybook/components": "^8.0.0",
+    "@storybook/core-events": "^8.0.0",
+    "@storybook/icons": "^1.2.12",
+    "@storybook/manager": "^8.0.0",
+    "@storybook/manager-api": "^8.0.0",
+    "@storybook/preview-api": "^8.0.0",
+    "@storybook/theming": "^8.0.0",
+    "@storybook/types": "^8.0.0",
     "@testing-library/react": "^10.4.9",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.14.8",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.17",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -57,8 +56,8 @@
     "react-dom": "^16.14.0",
     "tiny-invariant": "^1.3.1",
     "ts-jest": "^29.1.2",
-    "tsup": "^6.7.0",
-    "typescript": "^4.9.5"
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3"
   },
   "config": {
     "prettier_target": "src/**/*.{ts,tsx,js,jsx,md,json} test/**/*.{ts,tsx,js,jsx,md,json} examples/**/*.{ts,tsx,js,jsx,md,json}"
